--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-typescript": "^7.13.0",
-    "babel-jest": "^26.6.3"
+    "babel-jest": "^26.6.3",
+    "npm": "^7.18.1"
   }
 }
