--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "spread_game",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "test": "jest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.5.6",
-    "typescript": "^4.2.4"
-  },
-  "dependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.2",
-    "@babel/preset-typescript": "^7.13.0",
-    "babel-jest": "^26.6.3",
-    "npm": "^7.18.1"
-  }
+    "name": "spread_game",
+    "version": "1.0.0",
+    "description": "",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "scripts": {
+        "test": "jest",
+        "re:build": "rescript",
+        "re:start": "rescript build -w"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/jest": "^26.0.23",
+        "gentype": "^4.1.0",
+        "jest": "^26.6.3",
+        "rescript": "^9.1.4",
+        "ts-jest": "^26.5.6",
+        "typescript": "^4.2.4"
+    },
+    "dependencies": {
+        "@babel/core": "^7.14.3",
+        "@babel/preset-env": "^7.14.2",
+        "@babel/preset-typescript": "^7.13.0",
+        "babel-jest": "^26.6.3",
+        "npm": "^7.18.1"
+    }
 }
